--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,19 +4,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Just Tech News</title>
+  <title>Tech-Blog</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
 <body>
-  <div class="wrapper">
-    <header><h1><a href="/">Tech Blog</a></h1>
+  <div class="Header">
+    <header>
+      <h1>
+        <a href="/">Tech-Blog</a>
+      </h1>
+      <nav>  {{#if loggedIn}}  <a href="../dashboard.handlebars">dashboard</a>   <button id="logout" class="btn-no-style">logout</button>  {{else}}  <a href="./login.handlebars">login</a>{{/if}}
+      </nav>
     </header>
     <main>
+      {{{ body }}}
     </main>
-    <footer>  Thanks for visiting </footer>
+    <footer>
+   Thanks for coming!
+    </footer>
   </div>
-
+  
+  {{#if loggedIn}}
+  <script src="/public/javascript/logout.js"></script>
+  {{/if}}
 </body>
 
 </html>
