final hopepfullu update

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -14,7 +14,7 @@
 <!-- This keeps track of your posts and will have them in a neat container once you log in-->
 {{#if posts.length}}
 <section>
-  <h2>Your Post</h2>
+  <h2>Your Post3</h2>
   <ol>
     {{#each posts as |post|}}
     <li>
